# aoc2023

./: .gitmodules  LICENSE  README.md  createdirs.zsh
.github/workflows/: static.yml
d1/: .gitignore  p1.asm  p1.zsh  p2.asm  p2.c  p2.zsh
d10/src/main/kotlin/: Main.kt  Part2.kt
d11/: Part1.java  Part2.java
d12/: justfile  log  main.ts  package-lock.json  package.json  tsconfig.json
d13/: p1.lua
d15/: build.sbt
d15/.bsp/: sbt.json
d15/src/main/scala/: Part1.scala
d2/: CHANGELOG.md  d2.cabal
d2/app/: Main.hs
d21/: d21.go  go.mod
d3/: ti1.txt  ti2.txt  ti3.txt
d3/src/: main.rs
d4/: d4.opam  dune-project
d4/lib/: dune
d4/test/: dune
d5/: Program.cs
d6/: input2.txt  p1  p1.cpp  p2.cpp
d7/: README.md  d7.html  d7.js  style.css
d8/: p1.py  p2.py
d9/: p1.jl  p2.jl
